--- a/index.html
+++ b/index.html
@@ -53,36 +53,36 @@
             </tr>
             <tr>
                 <td>Sep-Oct</td>
-                <td>DSA (Arrays, Strings, Trees)</td>
+                <td>Advanced DSA (Graphs, DP)</td>
                 <td>1-june to 31-Aug</td>
             </tr>
             <tr>
                 <td>Nov-Dec</td>
-                <td>DSA (Arrays, Strings, Trees)</td>
+                <td>Web Development (Django/Flask)</td>
                 <td>1-june to 31-Aug</td>
             </tr>
             <tr>
                 <td>Jan-Feb</td>
-                <td>DSA (Arrays, Strings, Trees)</td>
-                <td>1-june to 31-Aug</td>
+                <td>ML & AI (TensorFlow, Pandas)</td>
+                <td></td>
             </tr>
             <tr>
                 <td>Mar-Apr</td>
-                <td>DSA (Arrays, Strings, Trees)</td>
+                <td>Work on Open Source Projects</td>
                 <td>1-june to 31-Aug</td>
             </tr>
             <tr>
                 <td>May-Jun</td>
+                <td>System Design + Scalability</td>
+                <td>1-june to 31-Aug</td>
+            </tr>
+            <tr>
+                <td>Jul-Sep</td>
                 <td>DSA (Arrays, Strings, Trees)</td>
                 <td>1-june to 31-Aug</td>
             </tr>
             <tr>
-                <td>June-Aug</td>
-                <td>DSA (Arrays, Strings, Trees)</td>
-                <td>1-june to 31-Aug</td>
-            </tr>
-            <tr>
-                <td>June-Aug</td>
+                <td>Oct-Dec</td>
                 <td>DSA (Arrays, Strings, Trees)</td>
                 <td>1-june to 31-Aug</td>
             </tr>
