--- a/index.html
+++ b/index.html
@@ -78,12 +78,13 @@
             </tr>
             <tr>
                 <td>Jul-Sep</td>
-                <td>DSA (Arrays, Strings, Trees)</td>
+                <td>FAANG Interview Prep</td>
                 <td>1-june to 31-Aug</td>
             </tr>
             <tr>
                 <td>Oct-Dec</td>
-                <td>DSA (Arrays, Strings, Trees)</td>
+                <td>Apply & Crack FAANG Interviews 🚀
+                    </td>
                 <td>1-june to 31-Aug</td>
             </tr>
         </table>
